syntax = "proto3";

option go_package = "./";

message HelloRequest{
    string SomeString = 1;
}

message HelloResponse{
    string Reply=1;
}

service Example{
    rpc ServerReply (HelloRequest) returns (HelloResponse);
    rpc ClientServerReply (stream HelloRequest) returns (HelloResponse);
    rpc ServerStreamReply ( HelloRequest) returns (stream HelloResponse);
    rpc BilateralStreamReply (stream HelloRequest) returns (stream HelloResponse);
}